removed unused variables and ui changes

--- a/index.html
+++ b/index.html
@@ -14,14 +14,23 @@
 </head>
 
 <body>
-    <h2>Tachiyomi Backup Details</h2>
-    <input type="file" id="selectFiles" value="Import" />
-    <button id="import">Import</button>
-    <textarea id="result" style="display:none;">
-    </textarea>
-    <p id="datetime"></p>
+    <div class="container">
+        <center>
+            <h2>Tachiyomi Backup Details</h2>
+        </center>
+        <hr>
+        <center>
+            <input type="file" id="selectFiles" value="Import" />
+            <button id="import">Import</button>
+        </center>
 
-    <p id="tachiyomiBackupDisplay"></p>
+        <textarea id="result" style="display:none;">
+    </textarea>
+
+        <p id="datetime"></p>
+        <p id="tachiyomiBackupDisplay"></p>
+
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
