--- a/index.html
+++ b/index.html
@@ -12,15 +12,45 @@
 
     <title>Tachiyomi Backup Viewer</title>
     <style>
+        /* Initial body setting */
         body {
-            padding: 22px;
+            padding: 16px;
             background-color: #ececec;
             color: #222831;
         }
 
+        /* After Switching theme*/
         .dark-mode {
             background-color: #222831;
             color: white;
+        }
+
+        /*Back To Top setting*/
+        #back2Top {
+            width: 40px;
+            line-height: 40px;
+            overflow: hidden;
+            z-index: 999;
+            display: none;
+            cursor: pointer;
+            -moz-transform: rotate(270deg);
+            -webkit-transform: rotate(270deg);
+            -o-transform: rotate(270deg);
+            -ms-transform: rotate(270deg);
+            transform: rotate(270deg);
+            position: fixed;
+            bottom: 50px;
+            right: 0;
+            background-color: #DDD;
+            color: #555;
+            text-align: center;
+            font-size: 30px;
+            text-decoration: none;
+        }
+
+        #back2Top:hover {
+            background-color: #DDF;
+            color: #000;
         }
     </style>
 </head>
@@ -32,18 +62,17 @@
                 <h4>Tachiyomi Backup Viewer</h4>
             </div>
             <div class="col-sm-2">
-                <button onclick="toggleTheme()"> Switch Theme</button>
+                <button onclick="switchTheme()"> Switch Theme</button>
             </div>
         </div>
-
-
-
         <hr>
+
         <center>
             <input type="file" id="selectFiles" value="Import" />
             <button id="import">Import</button>
         </center>
         <hr>
+
         <textarea id="result" style="display:none;">
         </textarea>
 
@@ -68,6 +97,8 @@
         <div class="row" id="tachiyomiMangaInfoDisplay">
         </div>
 
+        <a id="back2Top" title="Back to top" href="#">&#10148;</a>
+
 
     </div>
 
@@ -82,12 +113,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js-script.js"></script>
 
-
-    <script>
-
-    </script>
 </body>
 
 </html>
