accept only .json extension

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <hr>
 
         <center>
-            <input type="file" id="selectFiles" value="Import" />
+            <input type="file" id="selectFiles" value="Import" accept="application/JSON"/>
             <button id="import">Import</button>
         </center>
         <hr>
