handled Default category scenario, modified dark theme color combination

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         /* After Switching theme*/
         .dark-mode {
             background-color: #222831;
-            color: white;
+            color: #9ACD32;
         }
 
         /*Back To Top setting*/
@@ -68,7 +68,7 @@
         <hr>
 
         <center>
-            <input type="file" id="selectFiles" value="Import" accept="application/JSON"/>
+            <input type="file" id="selectFiles" value="Import" accept="application/JSON" />
             <button id="import">Import</button>
         </center>
         <hr>
